# Oxy-rag-task

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example_prompts.txt  main.py  pyproject.toml  requirements.txt
data/: LangChain.txt  LlamaIndex.txt  MCP.txt  cloud_storage.txt  download_images.txt  getting_started.txt  integration_methods.txt  localization.txt  restricted_targets.txt  usage_stats.txt
