[tool.poetry]
name = "oxy-rag"
version = "0.1.0"
description = ""
authors = ["martynas.love@gmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.47.1"
requests = "^2.32.4"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
langchain = "^0.3.27"
openai = "^1.97.1"
chromadb = "^1.0.15"
pydantic = "^2.11.7"
python-dotenv = "^1.1.1"
langchain-community = "^0.3.27"
langchain-openai = "^0.3.28"
langchain-text-splitters = "^0.3.9"
black = "==25.1.0"
ruff = "==0.12.5"
langchain-chroma = "^0.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
